--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SANTHOSH | Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-white text-gray-900 font-sans scroll-smooth">
