--- a/index.html
+++ b/index.html
@@ -105,20 +105,18 @@
   </div>
 </section>
 
-  <!-- SKILLS SECTION -->
-  <section class="py-20 px-6 mb-4">
-    <div class="max-w-5xl mx-auto text-center">
-      <h3 class="text-3xl font-semibold mb-10">Tools & Tech</h3>
-      <div class="grid grid-cols-3 md:grid-cols-6 gap-6">
-        <span class="text-lg font-medium">HTML</span>
-        <span class="text-lg font-medium">CSS</span>
-        <span class="text-lg font-medium">JavaScript</span>
-        <span class="text-lg font-medium">React</span>
-        <span class="text-lg font-medium">Tailwind</span>
-        <span class="text-lg font-medium">Figma</span>
-      </div>
+<!-- SKILLS SECTION -->
+<section class="py-20 px-6 mb-4">
+  <div class="max-w-5xl mx-auto text-center">
+    <h3 class="text-3xl font-semibold mb-10">Tools & Tech</h3>
+    <div class="grid grid-cols-3 md:grid-cols-4 gap-12" id="toolkit">
+      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</span>
+      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</span>
+      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</span>
+      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">React</span>    
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- CONTACT FORM -->
   <section id="contact" class="bg-gray-100 py-20 px-6">
