--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="grid gap-6 sm:gap-8 grid-cols-1 md:grid-cols-3">
 
       <!-- Project 1 -->
+      <a href="project1.html">
       <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-2xl hover:scale-105 transition-transform transform duration-300">
         <img src="assets/images/project1.jpg" alt="Screenshot of Project 1" class="h-40 sm:h-48 md:h-56 w-full object-cover">
         <div class="p- 3 sm:p-4">
@@ -82,8 +83,10 @@
           <p class="text-gray-600 text-sm mt-1 sm:mt-2">Short description about the project.</p>
         </div>
       </div>
+      </a>
 
       <!-- Project 2 -->
+      <a href="project2.html">
       <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-2xl hover:scale-105 transition-transform transform duration-300">
         <img src="assets/images/project2.jpg" alt="Screenshot of Project 2" class="h-40 sm:h-48 md:h-56 w-full object-cover">
         <div class="p-3 sm:p-4">
@@ -91,8 +94,10 @@
           <p class="text-gray-600 text-sm mt-1 sm:mt-2">Description of your second project.</p>
         </div>
       </div>
+      </a>
 
       <!-- Project 3 -->
+      <a href="project3.html">
       <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-2xl hover:scale-105 transition-transform transform duration-300">
         <img src="assets/images/projectred.jpg" alt="Screenshot of Project 3" class="h-40 sm:h-48 md:h-56 w-full object-cover">
         <div class="p-3 sm:p-4">
@@ -100,6 +105,7 @@
           <p class="text-gray-600 text-sm mt-1 sm:mt-2">Description of your third project.</p>
         </div>
       </div>
+      </a>
 
     </div>
   </div>
@@ -110,10 +116,10 @@
   <div class="max-w-5xl mx-auto text-center">
     <h3 class="text-3xl font-semibold mb-10">Tools & Tech</h3>
     <div class="grid grid-cols-3 md:grid-cols-4 gap-12" id="toolkit">
-      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</span>
-      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</span>
-      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</span>
-      <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">React</span>    
+      <a href="html.html">  <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</span>
+      <a href="css.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</span>
+      <a href="javascript.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</span>
+      <a href="react.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">React</span>    
     </div>
   </div>
 </section>
@@ -122,7 +128,7 @@
   <section id="contact" class="bg-gray-100 py-20 px-6">
     <div class="max-w-xl mx-auto text-center">
       <h3 class="text-3xl font-semibold mb-6">Get In Touch</h3>
-      
+
       <div class="w-full rounded-lg overflow-hidden shadow-lg bg-white p-4">
         <iframe 
           src="https://docs.google.com/forms/d/e/1FAIpQLSeJAesHQtC6ARY8Uf4LWFPhrPTLsbFzVTqhDcaUtmoEbQdlrg/viewform?usp=dialog" 
