--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
   <div class="max-w-5xl mx-auto text-center">
     <h3 class="text-3xl font-semibold mb-10">Tools & Tech</h3>
     <div class="grid grid-cols-3 md:grid-cols-4 gap-12" id="toolkit">
-      <a href="html.html">  <span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</span>
-      <a href="css.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</span>
+      <a href="html.html">  <span class="tool-item" tabindex="0" data-link="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML</span>
+      <a href="css.html"><span class="tool-item" tabindex="0" data-link="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</span>
       <a href="javascript.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</span>
-      <a href="react.html"><span class="tool-item" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">React</span>    
+      <a href="react.html"><span class="tool-item" tabindex="0" data-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">React</span>    
     </div>
   </div>
 </section>
